module_worldometer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> BEGIN skiptag BEGINCAT content CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR
Rule 2     content -> CONTENT content
Rule 3     content -> empty
Rule 4     skiptag -> CLOSEBAR skiptag
Rule 5     skiptag -> BEGINDATA skiptag
Rule 6     skiptag -> CONTENT skiptag
Rule 7     skiptag -> empty
Rule 8     skipdata -> CLOSEBAR skipdata
Rule 9     skipdata -> CONTENT skipdata
Rule 10    skipdata -> BEGINCAT skiptag
Rule 11    skipdata -> empty
Rule 12    empty -> <empty>

Terminals, with rules where they appear

BEGIN                : 1
BEGINCAT             : 1 10
BEGINDATA            : 1 1 5
CLOSEBAR             : 1 1 1 4 8
CONTENT              : 1 1 2 6 9
error                : 

Nonterminals, with rules where they appear

content              : 1 2
empty                : 3 7 11
skipdata             : 1 1 8 9
skiptag              : 1 4 5 6 10
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . BEGIN skiptag BEGINCAT content CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR

    BEGIN           shift and go to state 2

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> BEGIN . skiptag BEGINCAT content CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR
    (4) skiptag -> . CLOSEBAR skiptag
    (5) skiptag -> . BEGINDATA skiptag
    (6) skiptag -> . CONTENT skiptag
    (7) skiptag -> . empty
    (12) empty -> .

    CLOSEBAR        shift and go to state 4
    BEGINDATA       shift and go to state 5
    CONTENT         shift and go to state 6
    BEGINCAT        reduce using rule 12 (empty -> .)

    skiptag                        shift and go to state 3
    empty                          shift and go to state 7

state 3

    (1) start -> BEGIN skiptag . BEGINCAT content CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR

    BEGINCAT        shift and go to state 8


state 4

    (4) skiptag -> CLOSEBAR . skiptag
    (4) skiptag -> . CLOSEBAR skiptag
    (5) skiptag -> . BEGINDATA skiptag
    (6) skiptag -> . CONTENT skiptag
    (7) skiptag -> . empty
    (12) empty -> .

  ! shift/reduce conflict for BEGINDATA resolved as shift
    CLOSEBAR        shift and go to state 4
    BEGINDATA       shift and go to state 5
    CONTENT         shift and go to state 6
    BEGINCAT        reduce using rule 12 (empty -> .)

  ! BEGINDATA       [ reduce using rule 12 (empty -> .) ]

    skiptag                        shift and go to state 9
    empty                          shift and go to state 7

state 5

    (5) skiptag -> BEGINDATA . skiptag
    (4) skiptag -> . CLOSEBAR skiptag
    (5) skiptag -> . BEGINDATA skiptag
    (6) skiptag -> . CONTENT skiptag
    (7) skiptag -> . empty
    (12) empty -> .

  ! shift/reduce conflict for BEGINDATA resolved as shift
    CLOSEBAR        shift and go to state 4
    BEGINDATA       shift and go to state 5
    CONTENT         shift and go to state 6
    BEGINCAT        reduce using rule 12 (empty -> .)

  ! BEGINDATA       [ reduce using rule 12 (empty -> .) ]

    skiptag                        shift and go to state 10
    empty                          shift and go to state 7

state 6

    (6) skiptag -> CONTENT . skiptag
    (4) skiptag -> . CLOSEBAR skiptag
    (5) skiptag -> . BEGINDATA skiptag
    (6) skiptag -> . CONTENT skiptag
    (7) skiptag -> . empty
    (12) empty -> .

  ! shift/reduce conflict for BEGINDATA resolved as shift
    CLOSEBAR        shift and go to state 4
    BEGINDATA       shift and go to state 5
    CONTENT         shift and go to state 6
    BEGINCAT        reduce using rule 12 (empty -> .)

  ! BEGINDATA       [ reduce using rule 12 (empty -> .) ]

    skiptag                        shift and go to state 11
    empty                          shift and go to state 7

state 7

    (7) skiptag -> empty .

    BEGINCAT        reduce using rule 7 (skiptag -> empty .)
    BEGINDATA       reduce using rule 7 (skiptag -> empty .)


state 8

    (1) start -> BEGIN skiptag BEGINCAT . content CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR
    (2) content -> . CONTENT content
    (3) content -> . empty
    (12) empty -> .

    CONTENT         shift and go to state 13
    CLOSEBAR        reduce using rule 12 (empty -> .)

    content                        shift and go to state 12
    empty                          shift and go to state 14

state 9

    (4) skiptag -> CLOSEBAR skiptag .

    BEGINCAT        reduce using rule 4 (skiptag -> CLOSEBAR skiptag .)
    BEGINDATA       reduce using rule 4 (skiptag -> CLOSEBAR skiptag .)


state 10

    (5) skiptag -> BEGINDATA skiptag .

    BEGINCAT        reduce using rule 5 (skiptag -> BEGINDATA skiptag .)
    BEGINDATA       reduce using rule 5 (skiptag -> BEGINDATA skiptag .)


state 11

    (6) skiptag -> CONTENT skiptag .

    BEGINCAT        reduce using rule 6 (skiptag -> CONTENT skiptag .)
    BEGINDATA       reduce using rule 6 (skiptag -> CONTENT skiptag .)


state 12

    (1) start -> BEGIN skiptag BEGINCAT content . CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR

    CLOSEBAR        shift and go to state 15


state 13

    (2) content -> CONTENT . content
    (2) content -> . CONTENT content
    (3) content -> . empty
    (12) empty -> .

    CONTENT         shift and go to state 13
    CLOSEBAR        reduce using rule 12 (empty -> .)

    content                        shift and go to state 16
    empty                          shift and go to state 14

state 14

    (3) content -> empty .

    CLOSEBAR        reduce using rule 3 (content -> empty .)


state 15

    (1) start -> BEGIN skiptag BEGINCAT content CLOSEBAR . skipdata BEGINDATA CONTENT CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR
    (8) skipdata -> . CLOSEBAR skipdata
    (9) skipdata -> . CONTENT skipdata
    (10) skipdata -> . BEGINCAT skiptag
    (11) skipdata -> . empty
    (12) empty -> .

    CLOSEBAR        shift and go to state 18
    CONTENT         shift and go to state 20
    BEGINCAT        shift and go to state 17
    BEGINDATA       reduce using rule 12 (empty -> .)

    skipdata                       shift and go to state 19
    empty                          shift and go to state 21

state 16

    (2) content -> CONTENT content .

    CLOSEBAR        reduce using rule 2 (content -> CONTENT content .)


state 17

    (10) skipdata -> BEGINCAT . skiptag
    (4) skiptag -> . CLOSEBAR skiptag
    (5) skiptag -> . BEGINDATA skiptag
    (6) skiptag -> . CONTENT skiptag
    (7) skiptag -> . empty
    (12) empty -> .

  ! shift/reduce conflict for BEGINDATA resolved as shift
    CLOSEBAR        shift and go to state 4
    BEGINDATA       shift and go to state 5
    CONTENT         shift and go to state 6

  ! BEGINDATA       [ reduce using rule 12 (empty -> .) ]

    skiptag                        shift and go to state 22
    empty                          shift and go to state 7

state 18

    (8) skipdata -> CLOSEBAR . skipdata
    (8) skipdata -> . CLOSEBAR skipdata
    (9) skipdata -> . CONTENT skipdata
    (10) skipdata -> . BEGINCAT skiptag
    (11) skipdata -> . empty
    (12) empty -> .

    CLOSEBAR        shift and go to state 18
    CONTENT         shift and go to state 20
    BEGINCAT        shift and go to state 17
    BEGINDATA       reduce using rule 12 (empty -> .)

    skipdata                       shift and go to state 23
    empty                          shift and go to state 21

state 19

    (1) start -> BEGIN skiptag BEGINCAT content CLOSEBAR skipdata . BEGINDATA CONTENT CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR

    BEGINDATA       shift and go to state 24


state 20

    (9) skipdata -> CONTENT . skipdata
    (8) skipdata -> . CLOSEBAR skipdata
    (9) skipdata -> . CONTENT skipdata
    (10) skipdata -> . BEGINCAT skiptag
    (11) skipdata -> . empty
    (12) empty -> .

    CLOSEBAR        shift and go to state 18
    CONTENT         shift and go to state 20
    BEGINCAT        shift and go to state 17
    BEGINDATA       reduce using rule 12 (empty -> .)

    skipdata                       shift and go to state 25
    empty                          shift and go to state 21

state 21

    (11) skipdata -> empty .

    BEGINDATA       reduce using rule 11 (skipdata -> empty .)


state 22

    (10) skipdata -> BEGINCAT skiptag .

    BEGINDATA       reduce using rule 10 (skipdata -> BEGINCAT skiptag .)


state 23

    (8) skipdata -> CLOSEBAR skipdata .

    BEGINDATA       reduce using rule 8 (skipdata -> CLOSEBAR skipdata .)


state 24

    (1) start -> BEGIN skiptag BEGINCAT content CLOSEBAR skipdata BEGINDATA . CONTENT CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR

    CONTENT         shift and go to state 26


state 25

    (9) skipdata -> CONTENT skipdata .

    BEGINDATA       reduce using rule 9 (skipdata -> CONTENT skipdata .)


state 26

    (1) start -> BEGIN skiptag BEGINCAT content CLOSEBAR skipdata BEGINDATA CONTENT . CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR

    CLOSEBAR        shift and go to state 27


state 27

    (1) start -> BEGIN skiptag BEGINCAT content CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR . skipdata BEGINDATA CONTENT CLOSEBAR
    (8) skipdata -> . CLOSEBAR skipdata
    (9) skipdata -> . CONTENT skipdata
    (10) skipdata -> . BEGINCAT skiptag
    (11) skipdata -> . empty
    (12) empty -> .

    CLOSEBAR        shift and go to state 18
    CONTENT         shift and go to state 20
    BEGINCAT        shift and go to state 17
    BEGINDATA       reduce using rule 12 (empty -> .)

    skipdata                       shift and go to state 28
    empty                          shift and go to state 21

state 28

    (1) start -> BEGIN skiptag BEGINCAT content CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR skipdata . BEGINDATA CONTENT CLOSEBAR

    BEGINDATA       shift and go to state 29


state 29

    (1) start -> BEGIN skiptag BEGINCAT content CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR skipdata BEGINDATA . CONTENT CLOSEBAR

    CONTENT         shift and go to state 30


state 30

    (1) start -> BEGIN skiptag BEGINCAT content CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR skipdata BEGINDATA CONTENT . CLOSEBAR

    CLOSEBAR        shift and go to state 31


state 31

    (1) start -> BEGIN skiptag BEGINCAT content CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR .

    $end            reduce using rule 1 (start -> BEGIN skiptag BEGINCAT content CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR skipdata BEGINDATA CONTENT CLOSEBAR .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for BEGINDATA in state 4 resolved as shift
WARNING: shift/reduce conflict for BEGINDATA in state 5 resolved as shift
WARNING: shift/reduce conflict for BEGINDATA in state 6 resolved as shift
WARNING: shift/reduce conflict for BEGINDATA in state 17 resolved as shift
